[package]
authors = ['DCB <https://github.com/DCBPlatform>']
description = 'DCB Pool Pallet'
edition = '2018'
homepage = 'https://dcb.my'
license = 'GPL3'
name = 'pallet-pool'
repository = 'https://github.com/DCBPlatform/pallet-pool/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
sp-storage = { version = '2.0.0', default-features = false }
pallet-token = { path = '../token', default-features = false, version = '2.0.0' }

[dev-dependencies]
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }

[features]
default = ['std']
std = [
	'balances/std',
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-storage/std',
	'pallet-token/std',
]